--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "<h2>Website Link</h2>\r https://ahmed-4902.github.io/leon/",
 	"main": "index.js",
 	"scripts": {
-		"compile:sass": "sass --watch scss:app/css"
+		"compile:sass": "sass --watch src/scss:build/css"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +13,7 @@
 		"sass": "^1.58.0"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.4.0",
 		"bootstrap": "^5.3.0-alpha1"
 	}
 }
